--- a/index.html
+++ b/index.html
@@ -11,14 +11,22 @@
   <button><a href="https://joero1.github.io/Coral-Reefs-For-Cadets-Threats-to-Coral-Reefs/">Threats to Coral Reefs</a></button>
   <button><a href=" https://joero1.github.io/Coral-Reefs-For-Cadets-Reef-Conservation/">Reef Conservation</a></button>
 <h1>Fish</h1>
-  <h5>The Evolution of Fish</h5>
-  <h5>Two Classes of Fish</h5>
-  <h5>Fish Families</h5>
-  <h5>Anatomy</h5>
-  <h5>Trophic Levels</h5>
-  <h5>Life Cycle</h5>
-  <h5>Hermaphroditism</h5>
-  <h5>Adaptations</h5>
-  <h5>Do Fish Sleep?</h5>
+ <p>Approximately 45% of all vertebrate species are fish. In fact, there are more species of fish than there are of mammals, reptiles and birds combined!
+  <ul>
+   <li>Mammals - 5,400 species</li>
+   <li>Reptiles - 10,700 species</li>
+   <li>Birds - 10,000 species</li>
+   <li>Amphibians - 7,000 species</li>
+   <li><strong>Fish - 28,000 species</strong></li>
+ </ul></p>
+ <p><strong>Fish Evolution</strong><br>
+ We share a common ancestory with fish. Vertebrates are animals with a spinal cord. The first vertebrates appeared about 500 million years ago. These would have been very primative fish, much like modern-day hagfish. Vertebrates diverged into two lineages. The <strong>cyclostoms</strong> remained jawless. The <strong>gnathostoms</strong> developed jaws. The gnathostomes diverged into the <strong>osteichthyes</strong> (bony fish) and the <strong>chondrichthyes</strong> (cartilagenous fish, i.e. sharks, rays and skates). One group of osteichthyes gave rise to most modern fish. Another group gave rise to all four limbed vertebrates that would eventually conquor the land, including mankind.
+ </p>
+ <p><strong>Bony Fish (Osteichthyans)</strong><br>
+  Also known as <strong>teleosts</strong>, this group is extremely diverse and makes up the majority of fish on the planet. They have hard bony skeletons much like we do. They have conquored both the marine and freshwater environment. About 60% of species live in the ocean. They have a special organ called a swim bladder that is used to control buoyancy as they swim. The swim bladder contains air that gets pumped into a sack when pressure increases. This helps to keep the fish neutrally buoyant so that they don't sink.
+ </p>
+ <p><strong>Cartilagenous Fish (Chondrichthyans)</strong><br>
+  Also known as <strong>elasmobranchs</strong>, this group consists of all sharks and rays, as well as a few other groups such as the skates and guitar fish. About 95% of elasmobranch species are marine and they are exclusively carnivorous (with the exception of the bonnethead shark which can eat grass!). Unlike bony fish, elasmobranchs do not have swim bladders. Instead they control their buoyancy with a fatty substance called squalene. The deeper they go, the more squalene must be produced to stay neutrally buoyant. Elasmobranchs also have a special ability to detect electric signals in the water and this can help them detect prey and predators.
+ </p>
 </body>
 </html>
