--- a/index.html
+++ b/index.html
@@ -27,6 +27,30 @@
  </p>
  <p><strong>Cartilagenous Fish (Chondrichthyans)</strong><br>
   Also known as <strong>elasmobranchs</strong>, this group consists of all sharks and rays, as well as a few other groups such as the skates and guitar fish. About 95% of elasmobranch species are marine and they are exclusively carnivorous (with the exception of the bonnethead shark which can eat grass!). Unlike bony fish, elasmobranchs do not have swim bladders. Instead they control their buoyancy with a fatty substance called squalene. The deeper they go, the more squalene must be produced to stay neutrally buoyant. Elasmobranchs also have a special ability to detect electric signals in the water and this can help them detect prey and predators.
- </p>
+  
+   <br>
+   
+  <h2>Fish Families</h2>
+  <p>Even if you cannot identify a fish species, you can often identify it's family. Members of the same family typically share common shapes and other characteristics. Below are some of the most common fish families seen on coral reefs, but there are more.</p>
+  <p><strong>Angelfish</strong><br>
+    Laterally compressed. Oval-shaped in front half but roughly rectangular in the bottom half.</p>
+  <p><strong>Grunt</strong><br>
+    Rounded on top, slightly flatter on bottom</p>
+  <p><strong>Surgeonfish</strong><br>
+    Laterally compressed. More rounded from the side than the angelfish. Long faces (i.e. eyes quite high above the mouth).</p>
+  <p><strong>Butterflyfish</strong><br>
+    Laterally compressed like angelfish, but generally noticeably smaller and more oval-shaped.</p>
+  <p><strong>Parrotfish</strong><br>
+    Less laterally compressed. Quite a prominent mouth. Pectoral fins are quite active when swimming.</p>
+  <p><strong>Triggerfish</strong><br>
+    Have prominent fins above and below tail that are almost roughly symmetrical.</p>
+  <p><strong>Damselfish</strong><br>
+    Generic goldfish shape. Fins are quite rounded.</p>
+  <p><strong>Serranids</strong><br>
+    These include the groupers, hamlets and bass. Not at all laterally compressed. Generally quite large mouths useful fo sucking in prey.</p>
+  <p><strong>Wrasse</strong><br>
+    Cigar-shaped</p>
+    
+  </p>
 </body>
 </html>
