--- a/index.html
+++ b/index.html
@@ -46,6 +46,21 @@
   <p><strong>Farming</strong><br>
     Farming is an activity carried out by many damselfish species. They maintain "gardens" of roughly 1 squared meter. They do this by manipulating their territories in order to grow a desired algae as a monoculture, by removing other unwanted organisms from the area. They are thought to excrete metabolic waste products onto their territories that facilitates the continued fast growth of their crops. They are very aggressive and therefore also deter other fish that may graze on the algae.</p>
    
+  <br>
+  
+  <h2>Fish Predation</h2>
+  <p><strong>Piscivores</strong><br>
+    'Fish eaters'</p>
+  <p><strong>Invertivores</strong><br>
+    'Invertebrate eaters'</p>
+  <p><strong>Parasitivores<strong><br>
+    This is a branch of invertivores that eat parasites of other species. This is very imporant for the health of the reef community as parasites often carry disease and reduce the energy of the host.</p>  
+  <p><strong>Planktivores</strong><br>
+    'Plankton eaters'</p>
+  <p><strong>Coralivores</strong><br>
+    'Coral eaters'</p>
+    <p><strong>Ambush</strong><br>
+      Ambush predators are patient. They spend their time conserving energy and will wait for prey to come to them.</p> 
    
    
    
