--- a/index.html
+++ b/index.html
@@ -19,19 +19,28 @@
    <li>Amphibians - 7,000 species</li>
    <li><strong>Fish - 28,000 species</strong></li>
  </ul></p>
- <p><strong>Fish Evolution</strong><br>
- We share a common ancestory with fish. Vertebrates are animals with a spinal cord. The first vertebrates appeared about 500 million years ago. These would have been very primative fish, much like modern-day hagfish. Vertebrates diverged into two lineages. The <strong>cyclostoms</strong> remained jawless. The <strong>gnathostoms</strong> developed jaws. The gnathostomes diverged into the <strong>osteichthyes</strong> (bony fish) and the <strong>chondrichthyes</strong> (cartilagenous fish, i.e. sharks, rays and skates). One group of osteichthyes gave rise to most modern fish. Another group gave rise to all four limbed vertebrates that would eventually conquor the land, including mankind.
- </p>
- <p><strong>Bony Fish (Osteichthyans)</strong><br>
-  Also known as <strong>teleosts</strong>, this group is extremely diverse and makes up the majority of fish on the planet. They have hard bony skeletons much like we do. They have conquored both the marine and freshwater environment. About 60% of species live in the ocean. They have a special organ called a swim bladder that is used to control buoyancy as they swim. The swim bladder contains air that gets pumped into a sack when pressure increases. This helps to keep the fish neutrally buoyant so that they don't sink.
- </p>
- <p><strong>Cartilagenous Fish (Chondrichthyans)</strong><br>
-  Also known as <strong>elasmobranchs</strong>, this group consists of all sharks and rays, as well as a few other groups such as the skates and guitar fish. About 95% of elasmobranch species are marine and they are exclusively carnivorous (with the exception of the bonnethead shark which can eat grass!). Unlike bony fish, elasmobranchs do not have swim bladders. Instead they control their buoyancy with a fatty substance called squalene. The deeper they go, the more squalene must be produced to stay neutrally buoyant. Elasmobranchs also have a special ability to detect electric signals in the water and this can help them detect prey and predators.
+ 
+  <br>
+  
+  <h2>Fish Evolution</h2>
+ <p>We share a common ancestory with fish. Vertebrates are animals with a spinal cord. The first vertebrates appeared about 500 million years ago. These would have been very primative fish, much like modern-day hagfish. Vertebrates diverged into two lineages. The <strong>cyclostoms</strong> remained jawless. The <strong>gnathostoms</strong> developed jaws. The gnathostomes diverged into the <strong>osteichthyes</strong> (bony fish) and the <strong>chondrichthyes</strong> (cartilagenous fish, i.e. sharks, rays and skates). One group of osteichthyes gave rise to most modern fish. Another group gave rise to all four limbed vertebrates that would eventually conquor the land, including mankind.</p>
+ 
+  <br>
+  
+  <h2>Bony Fish (Osteichthyans)</h2>
+  <p>Also known as <strong>teleosts</strong>, this group is extremely diverse and makes up the majority of fish on the planet. They have hard bony skeletons much like we do. They have conquored both the marine and freshwater environment. About 60% of species live in the ocean. They have a special organ called a swim bladder that is used to control buoyancy as they swim. The swim bladder contains air that gets pumped into a sack when pressure increases. This helps to keep the fish neutrally buoyant so that they don't sink.</p>
+ 
+  <br>
+  
+  <h2>Cartilagenous Fish (Chondrichthyans)</h2>
+  <p>Also known as <strong>elasmobranchs</strong>, this group consists of all sharks and rays, as well as a few other groups such as the skates and guitar fish. About 95% of elasmobranch species are marine and they are exclusively carnivorous (with the exception of the bonnethead shark which can eat grass!). Unlike bony fish, elasmobranchs do not have swim bladders. Instead they control their buoyancy with a fatty substance called squalene. The deeper they go, the more squalene must be produced to stay neutrally buoyant. Elasmobranchs also have a special ability to detect electric signals in the water and this can help them detect prey and predators.</p>
   
    <br>
    
   <h2>Circulatory System</h2>
   <p>Mammals have a circulatory system that sends blood from the heart to the lungs to pick up oxygen, then returns it back to the heart before pumping it round the body to deliver the oxygen to other prgans. In contrast, fish blood goes straight from the gills to the rest of the body before returning to the heart. Most fish need constant movement to allow a fresh flow of oxygen to continuously enter the gills. This means many species need to keep swimming. Others may rest but 'pulse' their gills as they do so.</p>
+  
+  <br>
   
   <h2>Fish Herbivory</h2>
   <p>Herbivory is important for removing algae to facilitate coral growth. Only 10-25% of reef fish species are herbivorous but they tend to dominate in terms of biomass. They are most common in shallow waters as they feed on photosynthetic organisms. On shallow reefs some herbivorous fish have been observed to take over 150,000 bites per meter per day. Provided that their overall biomass is high enough, they can consume nearly half of the daily net algal growth. There are a few types of herbivory among fish...</p>
