--- a/index.html
+++ b/index.html
@@ -69,11 +69,15 @@
     <p><strong>Ambush</strong><br>
       Ambush predators are patient. They spend their time conserving energy and will wait for prey to come to them.</p> 
    
-   
-   
-   
-   
-   <br>
+  <br>
+  
+  <h2>Life Cycle of (Bony) Fish</h2>
+  <p>Fish eggs are commonly laid in the thousands to millions. However only a very small fraction of these will survive to adulthood. The eggs often drift in the sea as part of the plankton for many weeks before hatching. Once they hatch, the juvenile fish (or 'fry') are usually just a few millimeters long, even if they will eventually grow into a large adult. The life span of reef fish varies from a few years to several decades. For example, parrotfish live 5-6 years. Groupers can live up to 37 years.</p>
+  
+  
+  
+  
+  <br>
    
   <h2>Fish Families</h2>
   <p>Even if you cannot identify a fish species, you can often identify it's family. Members of the same family typically share common shapes and other characteristics. Below are some of the most common fish families seen on coral reefs, but there are more.</p>
