--- a/index.html
+++ b/index.html
@@ -74,8 +74,13 @@
   <h2>Life Cycle of (Bony) Fish</h2>
   <p>Fish eggs are commonly laid in the thousands to millions. However only a very small fraction of these will survive to adulthood. The eggs often drift in the sea as part of the plankton for many weeks before hatching. Once they hatch, the juvenile fish (or 'fry') are usually just a few millimeters long, even if they will eventually grow into a large adult. The life span of reef fish varies from a few years to several decades. For example, parrotfish live 5-6 years. Groupers can live up to 37 years.</p>
   
+  <br>
   
-  
+  <h2>Hermaphroditism</h2>
+  <p>Many fish species start their life as one sex but at some point change to another.<br>
+    <strong>Protandry</strong> - Male -> Female (e.g. clownfish)<br>
+    <strong>Protogyny</strong> - Female (e.g. sheepshead wrasse)<br>
+    <strong>Reversible</strong> (e.g. Hong Kong grouper)</p>
   
   <br>
    
