--- a/index.html
+++ b/index.html
@@ -78,9 +78,26 @@
   
   <h2>Hermaphroditism</h2>
   <p>Many fish species start their life as one sex but at some point change to another.<br>
-    <strong>Protandry</strong> - Male -> Female (e.g. clownfish)<br>
-    <strong>Protogyny</strong> - Female (e.g. sheepshead wrasse)<br>
+    <strong>Protandry</strong> - Male to Female (e.g. clownfish)<br>
+    <strong>Protogyny</strong> - Female to Male (e.g. sheepshead wrasse)<br>
     <strong>Reversible</strong> (e.g. Hong Kong grouper)</p>
+  
+  <br>
+  
+  <h2>Camouflage</h2>
+  <p>Camouflage is useful for either avoiding predators or for catching prey before they notice the predator. On the reef many fish (and other organisms) have colour patterns designed to blend in to the coral or algae. There are also a few other types of camouflage found on the reef...</p>
+  <p><strong>Silvering</strong><br>
+    Having a silver colour is common among fish living in the open water. The silver mirrors the blue water, therefore serving as camouflage.</p>
+  <p><strong>Countershading</strong><br>
+    Many species have a dark colour on top and are light underneath (think of a great white shark). This works because if they are observed from above, the dark colour blends in agains the dark blue back drop. If they are observed from beneath, the light colour blends in against the sunlight coming down.</p>
+  <p><strong>Transparency</strong><br>
+    Being transparent is effective for allowing an organism to be almost invisible. However it drastically limits the size and complexity of the animal tissue in order to stay effective. If a transparent organism eats prey that isn't also transparent, the "spell" will wear off!</p>
+  
+  
+  
+  
+  
+  
   
   <br>
    
