--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <button><a href="https://joero1.github.io/Coral-Reefs-For-Cadets-Reef-Classification/">Classifying Reef Organisms</a></button>
   <button><a href="https://joero1.github.io/Coral-Reefs-For-Cadets-Coral-Biology/">Coral Biology</a></button>
   <button><a href="https://joero1.github.io/Coral-Reefs-For-Cadets-Fish-Biology/">Fish Biology</a></button>
-  <button><a href="https://joero1.github.io/Coral-Reefs-For-Cadets-Interactions-and-Systems/">Reef Conditions and Interactions</a></button>
+  <button><a href="https://joero1.github.io/Coral-Reefs-For-Cadets-Interactions-and-Systems/">Conditions and Interactions</a></button>
   <button><a href="https://joero1.github.io/Coral-Reefs-For-Cadets-Mangroves-and-Seagrass/">Mangroves and Seagrass</a></button>
   <button><a href="https://joero1.github.io/Coral-Reefs-For-Cadets-Threats-to-Coral-Reefs/">Threats to Coral Reefs</a></button>
   <button><a href=" https://joero1.github.io/Coral-Reefs-For-Cadets-Reef-Conservation/">Reef Conservation</a></button>
-<h1>Fish</h1>
+<h1>Fish Biology</h1>
  <p>Approximately 45% of all vertebrate species are fish. In fact, there are more species of fish than there are of mammals, reptiles and birds combined!
   <ul>
    <li>Mammals - 5,400 species</li>
