--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
   <p>Herbivory is important for removing algae to facilitate coral growth. Only 10-25% of reef fish species are herbivorous but they tend to dominate in terms of biomass. They are most common in shallow waters as they feed on photosynthetic organisms. On shallow reefs some herbivorous fish have been observed to take over 150,000 bites per meter per day. Provided that their overall biomass is high enough, they can consume nearly half of the daily net algal growth. There are a few types of herbivory among fish...</p>
   <p><strong>Scrapers</strong><br>
     E.g. small parrotfish, surgeonfish and rabbitfish. They take algae off the surface of hard substrates, feeding off epilithic turf algae and taking small bits of the substrate with them. If you are on the reef and hear crackles, this may be the sound of scrapers removing the algae from the surface of the coral.</p>
+  <img src="https://lh3.googleusercontent.com/proxy/vt3KwrTxzssqEUZ1NMfodvqfnzsr1o1YbkAGerSxx44Bzj2qlfa3VWs1rhjKW8202Pv3CY2eB5qY3WPFMrYDC-BG0VwbcS1WD5YvK92NJWiNWqRZ1sgac3ab1rmrBeWO2p4Xe8mqgklI8ExQBwvWRHTGqg" height="120" width="170">
   <p><strong>Bioeroders</strong><br>
     E.g. large parrotfish. It is important for maintaining reef health by removing algae from the reef but also removing chunks of the substrate and therefore contributing to bioerosion. This is good because bioeroders remove dead coral and expose the underlying reef matrix that is then available for coral recruitment. Some bioeroders do eat live coral but the majority do not.</p>
   <p><strong>Grazers</strong><br>
