--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
   <img src="https://img1.whatsthatfish.com/unsafe/810x540/image.whatsthatfish.com/original/vn2D8s76H6.jpg" height="120" width="170">
   <p><strong>Browsers</strong><br>
     E.g. chubs. These fish eat larger macroalgae and therefore help to reduce its standing biomass. This helps to prevent the shading canopy effect of the algae, therefore helping more sunlight reach coral for photosynthesis. It also opens up space available for coral.</p>
+  <img src="https://reefguide.org/pix/thumb2/chub5.jpg" height="120" width="170">
   <p><strong>Farming</strong><br>
     Farming is an activity carried out by many damselfish species. They maintain "gardens" of roughly 1 squared meter. They do this by manipulating their territories in order to grow a desired algae as a monoculture, by removing other unwanted organisms from the area. They are thought to excrete metabolic waste products onto their territories that facilitates the continued fast growth of their crops. They are very aggressive and therefore also deter other fish that may graze on the algae.</p>
    
