--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
   <img src="https://reefguide.org/pix/thumb2/chub5.jpg" height="120" width="170">
   <p><strong>Farming</strong><br>
     Farming is an activity carried out by many damselfish species. They maintain "gardens" of roughly 1 squared meter. They do this by manipulating their territories in order to grow a desired algae as a monoculture, by removing other unwanted organisms from the area. They are thought to excrete metabolic waste products onto their territories that facilitates the continued fast growth of their crops. They are very aggressive and therefore also deter other fish that may graze on the algae.</p>
-   
-  <br>
+  <img src="https://a4.pbase.com/g9/89/793789/2/150487731.0GHOkKod.jpg" height="120" width="170"> 
+  
+  <br><br>
   
   <h2>Fish Predation</h2>
   <p><strong>Piscivores</strong><br>
