--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
   <h2>Fish Predation</h2>
   <p><strong>Piscivores</strong><br>
     'Fish eaters'</p>
+  <img src="http://bigfishmombasa.weebly.com/uploads/2/4/5/5/24555162/1235306_orig.jpg" height="120" width="170">
   <p><strong>Invertivores</strong><br>
     'Invertebrate eaters'</p>
   <p><strong>Parasitivores</strong><br>
