--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
   <img src="http://bigfishmombasa.weebly.com/uploads/2/4/5/5/24555162/1235306_orig.jpg" height="120" width="170">
   <p><strong>Invertivores</strong><br>
     'Invertebrate eaters'</p>
+  <img src="https://biogeodb.stri.si.edu/caribbean/resources/img/images/species/3723_8987.jpg" height="120" width="170">
   <p><strong>Parasitivores</strong><br>
     This is a branch of invertivores that eat parasites of other species. This is very imporant for the health of the reef community as parasites often carry disease and reduce the energy of the host.</p>  
   <p><strong>Planktivores</strong><br>
