--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
   <h2>Hermaphroditism</h2>
   <p>Many fish species start their life as one sex but at some point change to another.<br>
     <strong>Protandry</strong> - Male to Female (e.g. clownfish)<br>
+    <img src="https://www.hayesgardenworld.co.uk/sites/default/files/styles/blog_main_image/public/images/headers/marine_fish.jpg?itok=ozlWIm9G" height="120" width="170"><br>
     <strong>Protogyny</strong> - Female to Male (e.g. sheepshead wrasse)<br>
     <strong>Reversible</strong> (e.g. Hong Kong grouper)</p>
   
