--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
   <p>Camouflage is useful for either avoiding predators or for catching prey before they notice the predator. On the reef many fish (and other organisms) have colour patterns designed to blend in to the coral or algae. There are also a few other types of camouflage found on the reef...</p>
   <p><strong>Silvering</strong><br>
     Having a silver colour is common among fish living in the open water. The silver mirrors the blue water, therefore serving as camouflage.</p>
+  <img src="https://www.reefnews.com/reefnews/news/v05n14/cero1.jpg" height="120" width="170">
   <p><strong>Countershading</strong><br>
     Many species have a dark colour on top and are light underneath (think of a great white shark). This works because if they are observed from above, the dark colour blends in agains the dark blue back drop. If they are observed from beneath, the light colour blends in against the sunlight coming down.</p>
   <p><strong>Transparency</strong><br>
