--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
   <img src="https://www.reefnews.com/reefnews/news/v05n14/cero1.jpg" height="120" width="170">
   <p><strong>Countershading</strong><br>
     Many species have a dark colour on top and are light underneath (think of a great white shark). This works because if they are observed from above, the dark colour blends in agains the dark blue back drop. If they are observed from beneath, the light colour blends in against the sunlight coming down.</p>
+  <img src="https://images.theconversation.com/files/43861/original/6gqj734n-1394723838.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=926&fit=clip" height="120" width="170">
   <p><strong>Transparency</strong><br>
     Being transparent is effective for allowing an organism to be almost invisible. However it drastically limits the size and complexity of the animal tissue in order to stay effective. If a transparent organism eats prey that isn't also transparent, the "spell" will wear off!</p>
   
