--- a/index.html
+++ b/index.html
@@ -125,8 +125,9 @@
   <img src="https://images.theconversation.com/files/43861/original/6gqj734n-1394723838.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=926&fit=clip" height="120" width="170">
   <p><strong>Transparency</strong><br>
     Being transparent is effective for allowing an organism to be almost invisible. However it drastically limits the size and complexity of the animal tissue in order to stay effective. If a transparent organism eats prey that isn't also transparent, the "spell" will wear off!</p>
+  <img src="https://i.redd.it/n5sdi02r3qz41.jpg" height="120" width="170">
   
-  <br>
+  <br><br>
   
   <h2>Do Fish Sleep?</h2>
   <p>Fish don't undertake the same process of 'sleep' that mammals do, but most do have some form of rest that can be considered a form of sleeping. They lack eyelids so cannot close their eyes. When they rest in this way, they reduce their activity and their metabolism but remain somewhat alert to danger. Whilst resting, some float, others wedge themselves into crevices. When parrotfish sleep, they surroudn themselves in a bubble of mucus secreted from the mouth. This acts like a burglar alarm so they can better detect vibrations in the water if something threatening comes nearby. It also contains the pheromones of the parrotfish so that predators are less likely to pick up on their sent. Fish species that live permanently in shoals (e.g. mackerel) generally do not shut down.</p>
