--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
   <h2>Camouflage</h2>
   <p>Camouflage is useful for either avoiding predators or for catching prey before they notice the predator. On the reef many fish (and other organisms) have colour patterns designed to blend in to the coral or algae. There are also a few other types of camouflage found on the reef...</p>
   <p><strong>Mimicking the Benthos</strong></p>
+  <img src="https://rollingharbour.files.wordpress.com/2019/07/peacock-flounder-melinda-riger-g-b-scuba-copy.jpg" height="120" width="170">
   <p><strong>Silvering</strong><br>
     Having a silver colour is common among fish living in the open water. The silver mirrors the blue water, therefore serving as camouflage.</p>
   <img src="https://www.reefnews.com/reefnews/news/v05n14/cero1.jpg" height="120" width="170">
