--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
   <img src="https://rollingharbour.files.wordpress.com/2019/07/peacock-flounder-melinda-riger-g-b-scuba-copy.jpg" height="120" width="170">
   <img src="https://upload.wikimedia.org/wikipedia/commons/f/f4/Antennarius_pictus_-_Painted_FrogFish.jpg" height="120" width="120">
   <img src="https://i.pinimg.com/originals/85/8d/63/858d6390152573f4ab931130094a970f.jpg" height="120" width="120">
+  <img src="https://oceana.org/sites/default/files/styles/lightbox_full/public/shutterstock_nickeverett1981_pygmy_seahorse.jpg?itok=e_FmypAU" height="120" width="170">
   <p><strong>Silvering</strong><br>
     Having a silver colour is common among fish living in the open water. The silver mirrors the blue water, therefore serving as camouflage.</p>
   <img src="https://www.reefnews.com/reefnews/news/v05n14/cero1.jpg" height="120" width="170">
