--- a/index.html
+++ b/index.html
@@ -136,8 +136,9 @@
   
   <h2>Do Fish Sleep?</h2>
   <p>Fish don't undertake the same process of 'sleep' that mammals do, but most do have some form of rest that can be considered a form of sleeping. They lack eyelids so cannot close their eyes. When they rest in this way, they reduce their activity and their metabolism but remain somewhat alert to danger. Whilst resting, some float, others wedge themselves into crevices. When parrotfish sleep, they surroudn themselves in a bubble of mucus secreted from the mouth. This acts like a burglar alarm so they can better detect vibrations in the water if something threatening comes nearby. It also contains the pheromones of the parrotfish so that predators are less likely to pick up on their sent. Fish species that live permanently in shoals (e.g. mackerel) generally do not shut down.</p>
+  <img src="https://wordpress-385135-1210443.cloudwaysapps.com/uploads/images/poisson-baliste-cachette.jpg" height="120" width="170">
   
-  <br>
+  <br><br>
   
   <h2>Venomous Fish</h2>
   <p>'Poison' has to be ingested. 'Venom' is injected. There are many venomous fish that can be found on coral reefs. They normally have spines that can ingest neurotoxins into flesh if they penetrate it. This is usually to use as a defense against predators. Because other animals often evolve to stop perceiving venomous fish as food, venomous fish have a tendancy to be slow, sedentary and fearless. (Don't be too put off from visiting reefs! Venomous fish are generally not interested in you and only sting if threatened. Be sure to familiarise with local procedures for avoiding encounters with venom and correct treatment in the event of injection.</p>
