--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   
   <h2>Venomous Fish</h2>
   <p>'Poison' has to be ingested. 'Venom' is injected. There are many venomous fish that can be found on coral reefs. They normally have spines that can ingest neurotoxins into flesh if they penetrate it. This is usually to use as a defense against predators. Because other animals often evolve to stop perceiving venomous fish as food, venomous fish have a tendancy to be slow, sedentary and fearless. (Don't be too put off from visiting reefs! Venomous fish are generally not interested in you and only sting if threatened. Be sure to familiarise with local procedures for avoiding encounters with venom and correct treatment in the event of injection.</p>
-  
+  <img src="https://live.staticflickr.com/3158/2914121430_8ea91936fb_b.jpg" height="120" width="130">
  
 </body>
 </html>
