--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </h1>
   </div>
  
-    <div style="border: solid 2px white; padding: 0px 35px 10px 35px;">
+    <div style="border: solid 2px gray; padding: 0px 35px 10px 35px;">
     <p>Approximately 45% of all vertebrate species are fish. In fact, there are more species of fish than there are of mammals, reptiles and birds combined!
   <ul>
    <li>Mammals - 5,400 species</li>
