--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
       <div style="border: solid 2px gray; padding: 0px 35px 10px 35px;">
           <img align="right" height="150" width="250" style="padding-left: 50px; padding-top: 50px; padding-bottom: 20px; padding-right: 10px;" src="https://slideplayer.com/slide/5964248/20/images/15/Fish+Amphibian%2C+Reptile+Bird%2C+Mammal.jpg">
   <h2>Circulatory System</h2>
-  <p>Mammals have a circulatory system that sends blood from the heart to the lungs to pick up oxygen, then returns it back to the heart before pumping it round the body to deliver the oxygen to other prgans. In contrast, fish blood goes straight from the gills to the rest of the body before returning to the heart. Most fish need constant movement to allow a fresh flow of oxygen to continuously enter the gills. This means many species need to keep swimming. Others may rest but 'pulse' their gills as they do so.</p>
+  <p>Mammals have a circulatory system that sends blood from the heart to the lungs to pick up oxygen, then returns it back to the heart before pumping it round the body to deliver the oxygen to other organs.</p> 
+        <p>In contrast, fish blood goes straight from the gills to the rest of the body before returning to the heart. Most fish need constant movement to allow a fresh flow of oxygen to continuously enter the gills. This means many species need to keep swimming. Others may rest but 'pulse' their gills as they do so.</p>
   </div>
         
   <br><br>
