--- a/index.html
+++ b/index.html
@@ -191,14 +191,23 @@
   
       <div style="border: solid 2px gray; padding: 0px 35px 10px 35px;">
   <h2>Hermaphroditism</h2>
-  <p>Many fish species start their life as one sex but at some point change to another.<br>
-    <strong>Protandry</strong> - Male to Female (e.g. clownfish)<br>
-    <img src="https://www.hayesgardenworld.co.uk/sites/default/files/styles/blog_main_image/public/images/headers/marine_fish.jpg?itok=ozlWIm9G" height="120" width="170"><br>
-    <strong>Protogyny</strong> - Female to Male (e.g. sheepshead wrasse)<br>
-    <img src="https://www.telegraph.co.uk/content/dam/science/2017/10/22/TELEMMGLPICT000144108354_trans_NvBQzQNjv4BqZqbNnzMENeQWOPqPMX-4IhRy7TN-7bbEnHI_PZtKCtQ.jpeg" height="120" width="170"><br>
-    <strong>Reversible</strong> (e.g. Hong Kong grouper)<br>
-    <img src="https://i.pinimg.com/474x/fc/13/4f/fc134fe484798bcc802b9bf5043f10dc.jpg" height="120" width="170">
+        <p>Many fish species start their life as one sex but at some point change to another.</p>
+        <br>
+    <img align="right" style="padding-left: 60px; padding-right: 80px;" height="120" width="190" src="https://www.hayesgardenworld.co.uk/sites/default/files/styles/blog_main_image/public/images/headers/marine_fish.jpg?itok=ozlWIm9G">
+    <p style="padding-left: 300px;"><strong>Protandry</strong><br>
+      Male to Female (e.g. clownfish)</p>
+        
+        <br><br><br><br>
+            <img align="right" style="padding-left: 60px; padding-right: 80px;" height="120" width="190" src="https://www.telegraph.co.uk/content/dam/science/2017/10/22/TELEMMGLPICT000144108354_trans_NvBQzQNjv4BqZqbNnzMENeQWOPqPMX-4IhRy7TN-7bbEnHI_PZtKCtQ.jpeg">
+    <p style="padding-left: 300px;"><strong>Protogyny</strong><br>
+      Female to Male (e.g. sheepshead wrasse)</p>
+        
+        <br><br><br><br>
+     <img align="right" style="padding-left: 60px; padding-right: 80px;" height="120" width="190" src="https://i.pinimg.com/474x/fc/13/4f/fc134fe484798bcc802b9bf5043f10dc.jpg">
+    <p style="padding-left: 300px;"><strong>Reversible</strong><br> 
+      (e.g. Hong Kong grouper)
   </p>
+        <br><br><br><br>
   </div>
   
   <br><br>
