--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
     REEF &nbspFISH
     </h1>
   </div>
+  
+  <p style="font-size: 18px; text-align: center; padding-left: 40px; padding-right: 40px;">
+    Fish are by far the most abundant vertebrates on the planet. They are also the ancestors of all other vertebrates, including ourselves.
+    Fish vary enormously in both their physiology and in their positions within the ecosystem. They can be predators and prey, cleaners and parasites.
+    They can be less than a milimetre or over 15 metres long. In their evolutionary diversity, they have been able to conquor almost every aquatic location on the planet.
+    They are of particular importance on coral reefs. Four thousand species of fish live their.
+  </p>
  
     <div style="border: solid 2px gray; padding: 0px 35px 10px 35px;">
     <p>Approximately 45% of all vertebrate species are fish. In fact, there are more species of fish than there are of mammals, reptiles and birds combined!
